# browser-ext-mon

./: .editorconfig  .eslintrc  .eslintrc.ts  .gitmodules  .prettierrc.json  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: cli.yml  gitguardian.yml
ai-engine/extension-automate-test/: index.js  package.json  pnpm-lock.yaml
backend/osquery-be/: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
backend/osquery-be/.devcontainer/: .devcontainer.json
backend/osquery-be/caddy/: .gitignore  Caddyfile  Dockerfile
backend/osquery-be/caddy/caddy_data/caddy/pki/authorities/local/: intermediate.crt  intermediate.key  root.crt  root.key
backend/osquery-be/osquery_be/: constants.py  main.py  schemas.py  settings.py
backend/osquery-be/osquery_be/extension/: analysis.py  api.py  blacklist.py  model_loader.py  schemas.py  url_analysis.py
backend/osquery-be/osquery_be/extension/models/: url_analysis.pkl
backend/osquery-be/osquery_be/osquery/: api.py  config.py  enroll.py  exceptions.py  logger.py
backend/osquery-be/osquery_be/osquery/schemas/: config_schemas.py  enroll_schemas.py  logger_schemas.py
backend/osquery-be/osquery_be/schemas/: common_schemas.py  config_schemas.py  logger_schemas.py
backend/osquery-be/osquery_be/utils/: auth.py  enroll.py  exceptions.py
backend/osquery-be/tests/: pb.http
backend/osquery-be/tests/osquery/: config_request.json  enroll_request.json  enroll_secret.json  logger_request.json  osquery.flags
backend/pb/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
backend/pocketbase/: .gitignore  docker-compose.yml
backend/redis/: .gitignore  docker-compose.yml
bem-cli/: go.mod  go.sum  main.go
bem-cli/cmd/: root.go  setup.go
cli/: .gitignore  go.mod  go.sum  main.go
cli/cmd/: headless.go  root.go  setup.go  start.go
cli/osquery/: osquery.flags
components/: SuperTokensReactComponent.tsx
docs/diagrams/: README.md  db_schema.d2  sequence_diagram.d2  sequencediagram.d2
extension/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
extension/src/: background.ts  content.ts  main.css  options.vue  popup.vue
frontend/app/: app.config.ts  app.vue  nuxt.config.ts  (+2 more)
frontend/streamlit-app/: .dockerignore  .gitignore  .infisical.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/streamlit-app/.devcontainer/: devcontainer.json
frontend/streamlit-app/.streamlit/: config.toml
frontend/streamlit-app/streamlit_app/: dashboard.py
frontend/streamlit-app/streamlit_app/pages/: 1_agents.py  2_endpoints.py  2_nodes.py  2_users.py  3_extensions.py
frontend/streamlit-app/streamlit_app/utils/: apis.py  auth.py  auth_form.py  auth_ui.py  init_dragonfly.py  init_redis.py
pages/: index.vue
static_analysis/: tasks.py
(+82 files in other folders)
