[tool.poetry]
name = "osquery-be"
version = "0.1.0"
description = ""
authors = ["jarp0l <57973356+jarp0l@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "~0.109.2"
uvicorn = {version = "~0.27.1", extras = ["standard"]}
httpx = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
