[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = ""
authors = ["Prajwol Pradhan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
httpx = "^0.26.0"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
